@@ -1594,26 +1594,52 @@ assert({
     identical(anyDuplicated(dMb), 0L)
 }) # both differing in R <= 3.4.x
 
+
 ## when sep is given, an opening quote may be preceded by non-space
-stopifnot(ncol(read.table(text="=\"Total\t\"\t1\n",sep="\t")) == 2)
+stopifnot(  ncol(read.table(              text="=\"Total\t\"\t1\n",sep="\t")) == 2)
 stopifnot(length(scan(what=list("foo",1), text="=\"Total\t\"\t1\n",sep="\t")) == 2)
-
+##
 ## in 3.4.x, read.table failed on this
-stopifnot(ncol(read.table(text="=\"CJ01 \"\t550\n",sep="\t"))==2)
+stopifnot(  ncol(read.table(              text="=\"CJ01 \"\t550\n",sep="\t")) == 2)
 stopifnot(length(scan(what=list("foo",1), text="=\"CJ01 \"\t550\n",sep="\t")) == 2)
-
+##
 ## when no sep is given, quotes preceded by non-space have no special
 ## meaning and are retained (related to PR#15245)
-stopifnot(read.table(text="HO5\'\'\tH")[1,1] == "HO5\'\'")
-stopifnot(read.table(text="HO5\'\tH")[1,1] == "HO5\'")
+stopifnot(read.table(                 text="HO5\'\'\tH")[1,1] == "HO5\'\'")
+stopifnot(read.table(                 text="HO5\'\tH")[1,1]   == "HO5\'")
 stopifnot(scan(what=list("foo","foo"),text="HO5\'\'\tH")[[1]] == "HO5\'\'")
-stopifnot(scan(what=list("foo","foo"),text="HO5\'\tH")[[1]] == "HO5\'")
-
+stopifnot(scan(what=list("foo","foo"),text="HO5\'\tH")[[1]]   == "HO5\'")
+##
 ## when no sep is given, there does not have to be a separator between
 ## quoted entries; testing here to ensure read.table and scan agree,
 ## but without claiming this particular behavior is needed
-stopifnot(read.table(text="\"A\"\" B \"")$V2 == " B ")
+stopifnot(read.table(                 text="\"A\"\" B \"")$V2   == " B ")
 stopifnot(scan(what=list("foo","foo"),text="\"A\"\" B \"")[[2]] == " B ")
+
+
+## merge() names when by.y
+parents <- data.frame(name = c("Sarah", "Max", "Qin", "Lex"),
+                      sex = c("F", "M", "F", "M"), age = c(41, 43, 36, 51))
+children <- data.frame(parent = c("Sarah", "Max", "Qin"),
+                       name = c("Oliver", "Sebastian", "Kai-lee"),
+                       sex = c("M", "M", "F"), age = c(5,8,7))
+# merge.data.frame() no longer creating a duplicated col.names
+(m   <- merge(parents, children, by.x = "name", by.y = "parent"))
+ m._ <- merge(parents, children, by.x = "name", by.y = "parent", all.x=TRUE)
+(m_. <- merge(parents, children, by.x = "name", by.y = "parent", all.y=TRUE))
+ m__ <- merge(parents, children, by.x = "name", by.y = "parent", all = TRUE)
+## all four gave duplicate column 'name' with a warning in R <= 3.4.x
+assert({
+    identical(m,   m_.)
+    identical(m._, m__)
+    ## not identical(m, m__[-1,]) : row.names differ
+    identical(names(m), names(m__))
+    all(m == m__[-1,])
+    identical(dim(m),   c(3L, 6L))
+    identical(dim(m__), c(4L, 6L))
+})
+
+
 
 ## keep at end
 rbind(last =  proc.time() - .pt,
